Fixed bug for Safari users

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1128,3 +1128,12 @@ section {
     padding-right: 20px 15px;
   }
 }
+.row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
